<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Mangosta</string>

    <string name="title_activity_user_profile">User profile</string>
    <string name="title_activity_create_chat">Create chat</string>
    <string name="title_activity_chat">Chat</string>
    <string name="title_activity_chat_members">Members</string>
    <string name="title_activity_blocked_users">Block/Unblock users</string>
    <string name="title_activity_edit_room_members">Edit room members</string>
    <string name="title_activity_create_blog">Create blog post</string>
    <string name="title_activity_blog_post_details">Blog post details</string>
    <string name="title_activity_manage_contacts">Manage contacts</string>
    <string name="service_xmpp_session">XMPP Session Service</string>
    <string name="title_activity_about">About</string>

    <string name="action_settings">Settings</string>
    <string name="action_signout">Sign out</string>
    <string name="action_block_users">Block/Unblock users</string>
    <string name="action_leave_chat">Leave</string>
    <string name="action_chat_members">Members</string>
    <string name="action_destroy_chat">Destroy</string>
    <string name="action_change_room_name">Change room name</string>
    <string name="action_change_room_subject">Change room subject</string>
    <string name="action_add_to_contacts">Add user to contacts</string>
    <string name="action_remove_from_contacts">Remove user from contacts</string>
    <string name="action_delete_chat">Delete</string>
    <string name="action_about">About</string>

    <string name="title_tab_chat">Chat</string>
    <string name="title_tab_social">Social</string>
    <string name="title_rooms">ROOMS</string>
    <string name="title_people">PEOPLE</string>

    <string name="title_button_create_chat">Create chat</string>
    <string name="title_button_create_blog">Create blog</string>
    <string name="action_manage_contacts">Manage contacts</string>

    <string name="date_seconds_ago" tools:ignore="PluralsCandidate">%1$d seconds ago</string>
    <string name="date_seconds_now">just now</string>

    <string name="comment_created">Comment sent successfully</string>

    <string name="hint_edit_text">Enter text here</string>
    <string name="hint_enter_comment">Enter comment here</string>

    <string name="update_profile">Update Profile</string>
    <string name="enter_nickname">Enter Nickname</string>

    <string name="error">ERROR</string>
    <string name="loading">Loading &#8230;</string>
    <string name="cancel">Cancel</string>
    <string name="sending_request">Sending the request &#8230;</string>
    <string name="empty_message">Empty message</string>
    <string name="error_create_chat">ERROR! Could not create chat.</string>
    <string name="error_send_message">Error sending message</string>
    <string name="message_sent">Message sent</string>
    <string name="error_login">ERROR! Could not log in, please verify your data.</string>

    <string name="search_user_hint">Search user</string>
    <string name="title_chat_members">Chat members</string>
    <string name="add_user_to_chat">Add</string>
    <string name="remove_user_from_chat">Remove</string>
    <string name="chat_last_message">%1$s: %2$s</string>
    <string name="chat_last_message_sticker">%1$s sent a sticker</string>
    <string name="user_doesnt_exist">User \'%1$s\' doesn\'t exist in Mangosta. Send invitation?</string>
    <string name="invite_to_mangosta">Invite to Mangosta</string>
    <string name="add_people_to_create_chat">You have to add people to create a chat.</string>
    <string name="room_name">Room name</string>
    <string name="enter_room_name">Enter a name for the room</string>
    <string name="enter_room_name_hint">Enter room name here</string>
    <string name="enter_new_room_name">Enter a name for the room</string>
    <string name="room_name_changed">Room name changed</string>
    <string name="room_subject">Room subject</string>
    <string name="enter_room_subject_hint">Enter room subject here</string>
    <string name="enter_new_room_subject">Enter a new subject for the room</string>
    <string name="room_subject_changed">Room subject changed</string>
    <string name="want_to_leave_chat">Do you want to leave this chat?</string>
    <string name="want_to_delete_chat">Do you want to delete this chat?</string>
    <string name="want_to_destroy_chat">Do you want to destroy this chat?</string>
    <string name="correct_message">Correct message</string>
    <string name="message_to_blocked_user">Can\'t send message to a blocked contact</string>
    <string name="cant_send_message">Couldn\'t send message</string>
    <string name="enter_new_message">Enter the new body</string>
    <string name="typing">%1$s is typing &#8230;</string>

    <string name="muc_chat_type">MUC</string>
    <string name="muc_light_chat_type">MUC Light</string>

    <string name="title_blocked_users">Blocked</string>
    <string name="button_unblock_all">Unblock all</string>
    <string name="user_not_found">User not found</string>

    <string name="blog_post_published">Blog post published</string>
    <string name="blog_post_publishing">Publishing blog post</string>

    <string name="title_login">Login</string>
    <string name="title_user_name">User</string>
    <string name="title_password">Password</string>
    <string name="title_server">Server</string>
    <string name="hint_user_name">user name</string>
    <string name="hint_password">password</string>
    <string name="button_enter">Enter</string>

    <string name="title_contacts">Contacts</string>
    <string name="button_remove_all_contacts">Remove all contacts</string>
    <string name="user_removed_from_contacts">%1$s removed from contacts</string>
    <string name="user_added_to_contacts">%1$s added to contacts</string>
    <string name="roster_subscription_request_notification_title">Contact request</string>
    <string name="roster_subscription_request">%1$s wants to add you as a contact</string>
    <string name="connected">Connected</string>
    <string name="accept">Accept</string>
    <string name="decline">decline</string>

    <string name="about_mangosta">Mangosta for Android is part of the MongooseIM platform</string>
    <string name="version">v%1$s</string>
    <string name="about_copyright">Copyright © 2017 Erlang Solutions Ltd.</string>
    <string name="mangosta_link">https://github.com/esl/mangosta-android</string>
    <string name="mongooseim_link">https://github.com/esl/MongooseIM</string>
    <string name="source_code">Source code:</string>
    <string name="mongooseim_platform">MongooseIM platform:</string>
</resources>
